# bc

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: pr.yml  push.yml
bc/: CMakeLists.txt  Debug.cpp  Debug.hpp  Lock.cpp  Lock.hpp  Memory.cpp  Memory.hpp  Process.cpp  Process.hpp  String.cpp  String.hpp  System_Debug.cpp  System_Debug.hpp  System_Lock.cpp  System_Thread.cpp  Thread.cpp  Thread.hpp  Time.hpp
bc/lock/: Atomic.cpp  Atomic.hpp
bc/system/: System_Debug.cpp  System_Debug.hpp  System_Lock.cpp  System_Lock.hpp  System_Thread.cpp  System_Thread.hpp  System_Time.cpp  System_Time.hpp
bc/time/: Time.cpp  Time.hpp  TimeConst.hpp  Types.hpp
lib/: CMakeLists.txt
test/: CMakeLists.txt  Lock.cpp  Memory.cpp  Process.cpp  String.cpp  Thread.cpp  Time.cpp
